// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Field metadata select creation tests group It should fail to create field metadata with empty options 1`] = `
[
  {
    "extensions": {
      "code": "BAD_USER_INPUT",
    },
    "message": "Options are required for enum fields",
  },
]
`;

exports[`Field metadata select creation tests group It should fail to create option with invalid id 1`] = `
[
  {
    "extensions": {
      "code": "BAD_USER_INPUT",
    },
    "message": "Option id is invalid",
  },
]
`;

exports[`Field metadata select creation tests group It should fail to create two options with the same id 1`] = `
[
  {
    "extensions": {
      "code": "BAD_USER_INPUT",
    },
    "message": "Option id "fd1f11fd-3f05-4a33-bddf-800c3412ce98" already exists",
  },
]
`;
